# LibreOfficeAICopilot

./: .gitignore  Addons.xcu  LICENSE  Makefile  README.md  prompt.txt  pyproject.toml
libre_copilot/: Accelerators.xcu  Addons.xcu  copilot.py  description.xml
libre_copilot/description/: description_en.txt
notebooks/: testing-openai-api.ipynb
