[tool.poetry]
name = "libreoffice-copilot"
version = "0.1.0"
description = ""
authors = ["John Walz <johnwalz97@gmail.com>"]
readme = "README.md"
packages = [{include = "libreoffice_copilot"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.4"
uno = "^0.3.3"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.261"
isort = "^5.12.0"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
